Slider and images uploaded

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 {{> _header-block }}
-<body>
+<body class="active-preloader-ovh">
 
-    {{>_header_nav}}
+<div class="preloader"><div class="spinner"></div></div> <!-- /.preloader -->
+
+    {{>_header-nav}}
     {{{body}}}
     {{>_footer }}
 </body>
