Added performance and abouts us to front page

--- a/views/partials/_header-nav.handlebars
+++ b/views/partials/_header-nav.handlebars
@@ -8,14 +8,14 @@
             <div class="pull-right right-contact-info">
                 <p><i class="fas fa-clock"></i>Mon - Fri : 8:00 AM to 6:00 PM - PST</p><!--
                 --><p>
-                    <i class="fas fa-globe"></i>
+                    {{!-- <i class="fas fa-globe"></i>
                     <span class="select-box">
                         <select class="selectpicker" name="languages">
                             <option value="">EN</option>
                             <option value="1">BN</option>
                             <option value="2">DU</option>
                         </select>
-                    </span><!-- /.select-box -->
+                    </span><!-- /.select-box --> --}}
                 </p>
             </div><!-- /.pull-right -->
         </div><!-- /.container -->
@@ -35,41 +35,25 @@
 
                 <ul class="nav navbar-nav navigation-box">
                     <li class="current">
-                        <a href="index.html">Home</a>
-                        <ul class="sub-menu">
-                            <li><a href="index.html">Home Page One</a></li>
-                            <li><a href="index2.html">Home Page Two</a></li>
-                            <li><a href="index3.html">Home Page Three</a></li>
-                        </ul><!-- /.sub-menu -->
+                        <a href="/">Home</a>
                     </li>
-                    <li> <a href="about.html">About Us</a> </li>
+                    <li> <a href="/about">About Us</a> </li>
                     <li>
-                        <a href="services.html">Services</a>
-                        <ul class="sub-menu">
-                            <li> <a href="interior-design.html">Interior Design</a> </li>
-                            <li><a href="metal-roofing.html">Metal Roofing</a></li>
-                            <li><a href="home-expansion.html">Home Expansion</a></li>
-                            <li><a href="tower-construction.html">Tower Construction</a></li>
-                        </ul><!-- /.sub-menu -->
+                        <a href="/portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#">Pages</a>
+                        <a href="#">Services</a>
                         <ul class="sub-menu">
-                            <li> <a href="projects.html">Projects</a> </li>
-                            <li> <a href="project-single.html">Projects Single</a> </li>
-                            <li><a href="faq.html">FAQ Page</a></li>
-                            <li><a href="team.html">Team</a></li>
-                            <li><a href="testimonials.html">Testimonials</a></li>
+                            <li> <a href="#">Demolition</a></li>
+                            <li> <a href="#">Site Preparation</a> </li>
+                            <li><a href="#">Abatement Services</a></li>
+                            <li><a href="#">Asbestos and Lead Base<br/> Paint Removal Services</a></li>
+                            <li><a href="#">Bio-Hazard Services</a></li>
+                            <li><a href="#">Remediation Services</a></li>
+                            <li><a href="#">Emergency Response</a></li>
                         </ul><!-- /.sub-menu -->
                     </li>
-                    <li>
-                        <a href="blog.html">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog.html">Blog Classic</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul><!-- /.sub-menu -->
-                    </li>
-                    <li> <a href="contact.html">Contact</a> </li>
+                    <li> <a href="contact.html">Contact Us</a> </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
             <div class="right-side-box">
