--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@
 @import url(../plugins/icofont/css/icofont.css);
 @import url(../plugins/bands-icon/style.css);
 @import url(../plugins/fontawesome-5/css/fontawesome-all.min.css);
-@import url(../plugins/zxp-icon/style.css);
+@import url(../plugins/icon/style.css);
 /**************************
 * 2. miscelnious styles
 ***************************/
@@ -64,6 +64,7 @@ a:focus,
 a:active {
 	text-decoration: none !important;
 	outline: none !important;
+	color: #ffffff;
 }
 
 .container {
@@ -805,7 +806,7 @@ body.active-preloader-ovh {
 }
 
 .item img {
-	opacity: 0.2;
+	opacity: 0.8;
 }
 
 #minimal-bootstrap-carousel.slider-home-one .carousel-inner .item {
@@ -2819,11 +2820,11 @@ body.active-preloader-ovh {
 * 15. cta styles
 ***************************/
 .cta-style-one {
-	background: #13aa38 url(../img/backgroud-1-1.jpg) center center no-repeat fixed;
+	background: #13aa38 url(../img/7.jpg) center center no-repeat fixed;
 	background-size: cover;
 }
 .cta-style-one .inner {
-	background: rgba(249, 181, 34, 0.9);
+	background: rgba(19, 170, 56, 0.8); /* rgba(249, 181, 34, 0.9);*/
 	padding: 52.5px 0;
 }
 .cta-style-one h3 {
@@ -2837,7 +2838,7 @@ body.active-preloader-ovh {
 .cta-style-one a.cta-btn {
 	width: 173px;
 	height: 45px;
-	display: inline-block;
+	di5splay: inline-block;
 	vertical-align: middle;
 	background: #242c33;
 	text-align: center;
@@ -2870,7 +2871,7 @@ body.active-preloader-ovh {
 	padding: 0 0.5px;
 }
 .cta-style-two .cta-style-two-1 {
-	background: #252a33 url(../img/cta-two-1-bg.jpg) center center no-repeat;
+	background: #252a33 url(../img/8.jpg) center center no-repeat;
 	background-size: cover;
 	padding: 100px 0;
 	padding-left: 100px;
@@ -2923,7 +2924,7 @@ body.active-preloader-ovh {
 	padding: 99.5px 0;
 	padding-left: 100px;
 	padding-right: 100px;
-	background: #13aa38 url(../img/cta-two-2-bg.jpg) center center no-repeat;
+	background: #13aa38 url(../img/6.jpg) center center no-repeat;
 	background-size: cover;
 }
 @media (max-width: 1360px) {
@@ -3218,7 +3219,7 @@ body.active-preloader-ovh {
 	opacity: 0.8;
 }
 .brand-carousel-wrapper .brand-carousel i:hover {
-	opacity: 0.3;
+	opacity: 0.9;
 }
 .brand-carousel-wrapper .owl-theme .owl-nav {
 	display: none;
