About page has been added

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1413,7 +1413,7 @@ body.active-preloader-ovh {
 * 7. inner banner styles
 ***************************/
 .inner-banner {
-	background: #13aa38 url(../img/inner-banner.jpg) center center no-repeat;
+	background: #13aa38 url(../img/9.jpg) center center no-repeat;
 	background-size: cover;
 	padding-top: 240px;
 	padding-bottom: 120px;
