changed footer and navbar

--- a/views/partials/_about-home.handlebars
+++ b/views/partials/_about-home.handlebars
@@ -17,7 +17,7 @@
                 <div class="about-content">
                     <h3>AD Improvements</h3>
                     <span>We lead the way!</span>
-                    <p>We are a bilingual, international general construction company, specializing in a variety of services. Our growth has been achieved by maintaining high quality standards, solid business ethics and prompt comprehensive response to the needs of our clients.<br/><br/><br/></p>
+                    <p>We are a bilingual, international general construction company, specializing in a variety of engineering services. Our growth has been achieved by maintaining high quality standards, solid business ethics and prompt comprehensive response to the needs of our clients. We are an 8(a), minority owned small business in the state of California.<br/><br/><br/></p>
                     <!-- /.brand-logos -->
                 </div><!-- /.about-content -->
             </div><!-- /.col-md-7 -->
