--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -5,8 +5,8 @@
             <div class="row ">
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="footer-widget about-widget">
-                        <a href="index.html"><img src="img/footer-logo-1-1.png" alt="Awesome Image"/></a>
-                        <p>Since 1960, ZXP has built a reputation for producing high quality precision fabricated products for use in a variety of industries.</p>
+                        <a href="/"><img src="img/footer-logo-1-1.png" alt="Awesome Image"/></a>
+                        <p>Since 2002, AD Improvements is a bilingual international general construction company, specializing in a variety of services. Our growth has been achieved by maintaining high quality standards, solid business ethics and prompt comprehensive response to the needs of our clients.</p>
                         <div class="social">
                             <a href="#" class="fab fa-facebook-f"></a><!--
                             --><a href="#" class="fab fa-twitter"></a><!--
@@ -22,11 +22,11 @@
                             <h3>Quick Links</h3>
                         </div><!-- /.title -->
                         <ul class="links-list">
-                            <li><a href="#"><i class="fas fa-angle-right"></i>Home</a></li>
-                            <li><a href="#"><i class="fas fa-angle-right"></i>About Us</a></li>
+                            <li><a href="/"><i class="fas fa-angle-right"></i>Home</a></li>
+                            <li><a href="/about"><i class="fas fa-angle-right"></i>About Us</a></li>
                             <li><a href="#"><i class="fas fa-angle-right"></i>Portfolio</a></li>
                             <li><a href="#"><i class="fas fa-angle-right"></i>Services</a></li>
-                            <li><a href="#"><i class="fas fa-angle-right"></i>Contact</a></li>
+                            <li><a href="/contact"><i class="fas fa-angle-right"></i>Contact</a></li>
                         </ul><!-- /.links-list -->
                     </div><!-- /.footer-widget links-widget -->
                 </div><!-- /.col-md-2 -->
@@ -73,7 +73,7 @@
             </div><!-- /.row -->
         </div><!-- /.container -->
     </div><!-- /.footer-top -->
-    <div class="footer-subscribe">
+    {{!-- <div class="footer-subscribe">
         <div class="container">
             <div class="left-title pull-left">
                 <h3>Subscribe your E-mail for our Newsletter & Business Tips</h3>
@@ -86,7 +86,7 @@
                 <div class="result"></div><!-- /.result -->
             </div><!-- /.right-form-box -->
         </div><!-- /.container -->
-    </div><!-- /.footer-subscribe -->
+    </div><!-- /.footer-subscribe --> --}}
 </footer><!-- /.site-footer -->
 <div class="footer-bottom">
     <div class="container">
