--- a/views/partials/_header-nav.handlebars
+++ b/views/partials/_header-nav.handlebars
@@ -25,7 +25,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed zxp-icon-menu" data-toggle="collapse" data-target=".main-navigation" aria-expanded="false"> </button>
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/">
                     <img src="img/header-logo-1-1.jpg" alt="Awesome Image"/>
                 </a>
             </div>
@@ -39,7 +39,7 @@
                     </li>
                     <li> <a href="/about">About Us</a> </li>
                     <li>
-                        <a href="/portfolio">Portfolio</a>
+                        <a href="#">Portfolio</a>
                     </li>
                     <li>
                         <a href="#">Services</a>
@@ -53,12 +53,12 @@
                             <li><a href="#">Emergency Response</a></li>
                         </ul><!-- /.sub-menu -->
                     </li>
-                    <li> <a href="contact.html">Contact Us</a> </li>
+                    <li> <a href="/contact">Contact Us</a> </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
             <div class="right-side-box">
                 <a href="#test-search" class="fas fa-search search-btn popup-with-zoom-anim"></a><!--
-                --><a href="#" class="rqa-btn">Request Quote</a>
+                --><a href="/contact" class="rqa-btn">Request Quote</a>
             </div><!-- /.right-side-box -->
         </div><!-- /.container -->
     </nav>
