Footer content has been added

--- a/views/main/about.handlebars
+++ b/views/main/about.handlebars
@@ -22,7 +22,7 @@
                 </div><!-- /.about-content -->
             </div><!-- /.col-md-6 -->
             <div class="col-md-6 text-right">
-                <img src="img/about-1-1.png" alt="Awesome Image"/>
+                <img src="img/company.jpg" width=499 height=423 alt="Awesome Image"/>
             </div><!-- /.col-md-6 -->
         </div><!-- /.row -->
     </div><!-- /.container -->
@@ -143,13 +143,13 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="sec-title">
-                    <h3>Frequently Asked Question</h3>
+                    <h3>Learn more about our services</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, aperiam consequuntur dolore mollitia laborum officia </p>
                 </div><!-- /.sec-title -->
                 <div class="accrodion-grp" data-grp-name="faq-accrodion">
                     <div class="accrodion active">
                         <div class="accrodion-title">
-                            <h4>Lorem ipsum dolor sit amet</h4>
+                            <h4>Demolition</h4>
                         </div>
                         <div class="accrodion-content">
                             <div class="inner">
@@ -159,7 +159,7 @@
                     </div>
                     <div class="accrodion ">
                         <div class="accrodion-title">
-                            <h4>Dolor sit amet, consectetuer adipiscing elit</h4>
+                            <h4>Site Preparation</h4>
                         </div>
                         <div class="accrodion-content">
                             <div class="inner">
@@ -169,7 +169,7 @@
                     </div>
                     <div class="accrodion">
                         <div class="accrodion-title">
-                            <h4>Sed diam nonummy nibh euismod</h4>
+                            <h4>Abatement Services</h4>
                         </div>
                         <div class="accrodion-content">
                             <div class="inner">
@@ -179,7 +179,37 @@
                     </div>
                     <div class="accrodion">
                         <div class="accrodion-title">
-                            <h4>Lorem ipsum dolor sit amet.</h4>
+                            <h4>Asbestos and Lead Base Paint Removal Services</h4>
+                        </div>
+                        <div class="accrodion-content">
+                            <div class="inner">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, inventore cumque veniam, praesentium velit incidunt rem quas a, quos eos ipsum, reprehenderit voluptatem. </p>
+                            </div><!-- /.inner -->
+                        </div>
+                    </div>
+                    <div class="accrodion">
+                        <div class="accrodion-title">
+                            <h4>Bio-Hazard Services</h4>
+                        </div>
+                        <div class="accrodion-content">
+                            <div class="inner">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, inventore cumque veniam, praesentium velit incidunt rem quas a, quos eos ipsum, reprehenderit voluptatem. </p>
+                            </div><!-- /.inner -->
+                        </div>
+                    </div>
+                    <div class="accrodion">
+                        <div class="accrodion-title">
+                            <h4>Remediation Services</h4>
+                        </div>
+                        <div class="accrodion-content">
+                            <div class="inner">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, inventore cumque veniam, praesentium velit incidunt rem quas a, quos eos ipsum, reprehenderit voluptatem. </p>
+                            </div><!-- /.inner -->
+                        </div>
+                    </div>
+                    <div class="accrodion">
+                        <div class="accrodion-title">
+                            <h4>Emergency Response Services</h4>
                         </div>
                         <div class="accrodion-content">
                             <div class="inner">
