--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -33,39 +33,51 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="footer-widget twitter-widget">
                         <div class="title">
-                            <h3>Twitter Feed</h3>
+                            <h3>Headquarters</h3>
                         </div><!-- /.title -->
                         <div class="single-tweet">
-                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit. Ed quia con sequuntur.</p>
-                            <div class="name"><i class="fab fa-twitter"></i>@Mark Wahlberg</div><!-- /.name -->
+                            <p>12252 Woodruff Ave<br/>Downey, CA 90241</p>
+                            {{!-- <div class="name"><i class="fab fa-twitter"></i>@Mark Wahlberg</div><!-- /.name --> --}}
                         </div><!-- /.single-tweet -->
                         <div class="single-tweet">
-                            <p>Neque porro quisquam est, qui dolor em ipsum quia dolor sit amet.</p>
-                            <div class="name"><i class="fab fa-twitter"></i>@Andy Samberg</div><!-- /.name -->
+                            <p><i class="zxp-icon-old-telephone-ringing"></i> P (562) 572-3177</p>
+                        </div><!-- /.single-tweet -->
+                        <div class="single-tweet">
+                            <p><i class="zxp-icon-old-telephone-ringing"></i> F (562) xxx-xxxx</p>
+
                         </div><!-- /.single-tweet -->
                     </div><!-- /.footer-widget twitter-widget -->
                 </div><!-- /.col-md-4 -->
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="footer-widget recent-post-widget">
                         <div class="title">
-                            <h3>Recent Post</h3>
+                            <h3>Our Team Members</h3>
                         </div><!-- /.title -->
-                        <div class="single-recent-post">
+                         <div class="single-recent-post">
                             <div class="img-box">
-                                <img src="img/footer-rp-1-1.jpg" alt="Awesome Image"/>
+                                <img src="img/ceo.jpg" width=80 height=80 alt="Awesome Image"/>
                             </div><!-- /.img-box -->
                             <div class="text-box">
-                                <a href="#"><h4>China industrial profit growth slows to low</h4></a>
-                                <p>5 hours ago</p>
+                                <a href="#"><h4>Robert Acosta</h4></a>
+                                <div class="name">CEO</div>
                             </div><!-- /.text-box -->
                         </div><!-- /.single-recent-post -->
                         <div class="single-recent-post">
                             <div class="img-box">
-                                <img src="img/footer-rp-1-2.jpg" alt="Awesome Image"/>
+                                <img src="img/mich.jpg" width=80 height=80 alt="Awesome Image"/>
                             </div><!-- /.img-box -->
                             <div class="text-box">
-                                <a href="#"><h4>Industrial space to remain tight</h4></a>
-                                <p>5 hours ago</p>
+                                <a href="#"><h4>Michelle Acosta</h4></a>
+                                <div class="name">Project Manager</div>
+                            </div><!-- /.text-box -->
+                        </div><!-- /.single-recent-post -->
+                        <div class="single-recent-post">
+                            <div class="img-box">
+                                <img src="img/jan.jpg" width=80 height=80 alt="Awesome Image"/>
+                            </div><!-- /.img-box -->
+                            <div class="text-box">
+                                <a href="#"><h4>Janet Morales</h4></a>
+                                <p>Quality Control Manager</p>
                             </div><!-- /.text-box -->
                         </div><!-- /.single-recent-post -->
                     </div><!-- /.footer-widget recent-post-widget -->
