fixing the about page

--- a/views/main/about.handlebars
+++ b/views/main/about.handlebars
@@ -14,9 +14,9 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="about-content">
-                    <span>About Company</span>
+                    <span>About Us</span>
                     <h3>We individually assess each <br /> plan and offer optimal solutions</h3>
-                    <h4>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praese. Ntium voluum deleniti atque corrupti quos.</h4>
+                    <h4>At  AD Improvements vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praese. Ntium voluum deleniti atque corrupti quos.</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrudexe rc itation ullamco laboris nisi ut aliquip ex ea com modo consequat. Duis aute irure.</p>
                     <a href="#" class="about-btn">Our Services</a>
                 </div><!-- /.about-content -->
